styles/styles.css
/* ... */
@keyframes fadeInRight{
    0% {
        transform: translateX(-200px);
        opacity: 0;
    }

    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes fadeIn{
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes boxShadowAnimation{
    0% {
        box-shadow: 0 0 0 0 transparent;
    }

    100%{
    box-shadow: 0 0 8rem 4rem var(--main-color);
    }
}

/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/
/*RESPONSIVE*/

/*1200px*/
@media (max-width: 1200px) {
    html {
        font-size: 60%;
    }
}

/*991px*/
@media (max-width: 991px){
    .header {
        padding: 2rem 3%;
    }

    section {
        padding: 10rem 3% 2rem;
    }

    .services{
        padding-bottom: 7rem;
    }

    .portfolio{
        padding-bottom: 7rem;
    }

    .contact{
        min-height: auto;
    }

    .footer{
        padding: 2rem 3%;
        margin-top: 10vh;
    }
}

@media (max-width: 903px) {
    .protfolio-container{
        grid-template-columns: repeat(2, 1fr);
    }
}


/*768px*/
@media (max-width: 768px){
    *{
        text-align: center;
    }

    html{
        font-size: 85%;
    }

    section{
        padding: 15vh 2% 0;
        height: fit-content !important;
    }

    .heading{
        padding: 1.1em;
    }

    /*MENU ICON*/
    /*MENU ICON*/
    /*MENU ICON*/

    #menu-icon{
        position: fixed;
        display: block;
    }

    .header{
        display: flex;
        align-items: flex-end;
    }

    .navbar{
        position: absolute;
        top: 100%;
        right: 3.45vw;
        padding: 1rem 3%;
        background: var(--second-bg-color);
        border-top: .1rem solid rgba(0, 0, 0, .2);
        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
        flex-direction: column;
        align-items: center;
        width: 35vw;
        margin-top: 6vh;
        padding:  5vh 0 5vh 0;
        transform-origin: 0 0;
    }

    .navbar.on{
        display: flex;
        animation: navbarMobileAnimation .5s ease forwards;
    }

    .navbar.off{
        animation: navbarMobileAnimationClosing .5s ease forwards;
    }

    .navbar.first-off{
        display: none;
    }
    
    .navbar-links{
        font-size: 2rem;
        margin: 2vh 0 2vh 0;
        animation: none !important;
    }

    /*HOME*/
    /*HOME*/
    /*HOME*/


    .home{
        flex-direction: column-reverse;
        gap: 10vh;
    }

    .home-content h3{
        font-size: 2.6rem;
    }

    .home-content h1{
        font-size: 5rem;
    }

    .home-img img{
        width: 50vw;
        margin-top: 2.5vh;
        animation: zoomIn 2s ease forwards, boxShadowAnimationMobile 2s ease forwards, floatImageMobile 4s ease-in-out infinite;
        animation-delay: 1s, 2s, 3s;
        
    }

    .home-content p{
        margin-right: 20vw;
        margin-left: 20vw;
        font-size: 1.4rem;
    }

    .home .btn{
        margin-left: 0;
    }

    /*ABOUT*/
    /*ABOUT*/
    /*ABOUT*/

    .about{
        flex-direction: column-reverse;
        margin-top: 10rem;
    }

    .about .heading{
        text-align: center;
        margin: 2rem;
    }

    .about img{
        width: 70vw;
        margin: 0 0 10vh 0;
    }

    .about-content p{
        margin-right: 10vw;
        margin-left: 10vw;
        margin-top: 2vw;
    }

    .services h2{
        margin-bottom: 3rem;
    }

    .portfolio h2{
        margin-bottom: 3rem;
    }

    .protfolio-container{
        grid-template-columns: repeat(2, 1fr);
    }

    .portfolio-layer h4{
        font-size: 1.3rem;
    }

    .portfolio-layer p{
        font-size: .95rem;
    }

    .portfolio-layer a{
        height: 2.5rem;
        width: 2.5rem;
    }

    .portfolio-layer a i{
        font-size: 1.4rem;
    }

    .footer{
        margin-top: 20vh;
    }

    /*ANIMATION 768px*/
    /*ANIMATION 768px*/
    /*ANIMATION 768px*/

    @keyframes navbarMobileAnimation{
    0%{
        opacity: 0;
        transform: scaleY(0);
    }

    100%{
        opacity: 1;
        transform: scaleY(1);
    }
    }

    @keyframes navbarMobileAnimationClosing{
        0%{
            opacity: 1;
            transform: scaleY(1);
        }
    
        100%{
            opacity: 0;
            transform: scaleY(0);
        }
        }

    @keyframes floatImageMobile{
    0%{
        transform: translate(0, 0);
    }

    50%{
        transform: translate(0, .8rem);
    }

    100%{
        transform: translate(0, 0);
    }
    }

    @keyframes boxShadowAnimationMobile{
        0% {
            box-shadow: 0 0 0 0 transparent;
        }
    
        100%{
        box-shadow: 0 0 8rem 4rem var(--main-color);
        }
    }
}

/*617px*/
@media (max-width: 617px){
    .navbar{
        width: 50vw;
    }

    .protfolio-container{
        grid-template-columns: 1fr;
    }
}

@media (max-width: 450px){
    html{
        font-size: 65%;
    }

    .contact form .input-box input{
        width: 100%;
    }
}

@media (max-width: 365px){
    .home-img img{
        width: 90vw;
    }

    .about-img img{
        width: 90vw;
    }

    .footer{
        flex-direction: column-reverse;
    }

    .footer p{
        text-align: center;
        margin-top: 2rem;
    }
}

